# compendium

./: .env.example  .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml  docs-drift.yml  release.yml
app/: demo.config.mjs  index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  error.rs  lib.rs
app/src-tauri/src/engine/: appdb.rs  cohere.rs  keys.rs  mod.rs  pack.rs  search.rs
app/src-tauri/src/engine/advisor/: context.rs  export.rs  mod.rs  prompts.rs  types.rs
app/src-tauri/tests/: advisor_test.rs  docs_pack_test.rs  dump_demo_fixture.rs  engine_test.rs  eval_retrieval.rs
assets/: make_icon.py
docs/: CONTRIBUTING.md  PACK_FORMAT.md  PLAN.md
eval/: README.md  deepeval_eval.py  generation_questions.json  requirements.txt  retrieval_golden.json
pipeline/: README.md  requirements.txt
pipeline/compendium_pack/: __init__.py  __main__.py  builder.py  embedder.py  indexer.py  recipe.py  validator.py  writer.py
research/: advisor-pipeline.md  cohere-agentic.md  cohere-platform.md  context-management.md  desktop-stack.md  docs-acquisition.md  langsmith-docs-scope.md  ui-stack.md  vector-store.md
research/corpus/: _repo-overview.json  agentic_rag.json  catalog.md  context_enrichment_window_around_chunk_with_llamaindex.json  contextual_compression.json  crag.json  dartboard.json  define_evaluation_metrics.json  end-2-end_rag_evaluation.json  evaluation_grouse.json  fusion_retrieval.json  raptor.json  (+9 more)
(+57 files in other folders)
