[package]
name = "compendium"
version = "0.1.0"
description = "Compendium — problem → method advisor over curated knowledge packs"
authors = ["Akshit Ireddy"]
edition = "2021"

[lib]
name = "compendium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
# MUST stay in lockstep with pipeline/requirements.txt (serialized index format)
usearch = "=2.26.0"
keyring = "4"  # default 'v1' feature includes the Windows Credential Manager store
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures-util = "0.3"
thiserror = "2"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
